# advent-of-code-2021

./: aoc.ipynb  pyproject.toml
