[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Kian Mehrabani <kianm@spotify.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
